--- a/styles/globals.css
+++ b/styles/globals.css
@@ -168,3 +168,19 @@
 .flex-between {
   @apply flex justify-between items-center;
 }
+
+/*Pagination Component*/
+.pagination {
+  @apply flex-between w-full rounded-lg border border-gray-300 bg-white/20 px-4 py-3 sm:px-6;
+}
+.btn-sm-pagination {
+  @apply relative inline-flex items-center rounded-md border border-gray-300 bg-white/20 px-4 py-2 text-sm font-medium text-gray-700 hover:bg-primary-orange hover:text-white;
+}
+
+.btn-index-pagination {
+  @apply relative inline-flex items-center px-4 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:z-20 focus:outline-offset-0;
+}
+
+.btn-pagination-active {
+  @apply z-10 bg-primary-orange text-white focus:z-20 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-orange hover:text-gray-900;
+}
