adding dark-mode feature

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,19 +74,19 @@
 /* Tailwind Styles */
 
 .app {
-  @apply relative z-10 flex justify-center items-center flex-col max-w-7xl mx-auto sm:px-16 px-6;
+  @apply relative z-10 flex justify-center items-center flex-col max-w-full mx-auto dark:bg-gray-900 sm:px-16 px-6;
 }
 
 .black_btn {
-  @apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center dark:text-white dark:border-orange-600 dark:bg-orange-600 dark:hover:bg-orange-500 dark:hover:text-white;
 }
 
 .outline_btn {
-  @apply rounded-full border border-black bg-transparent py-1.5 px-5 text-black transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full border border-black dark:border-orange-400 bg-transparent py-1.5 px-5 text-black dark:text-slate-200 transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
 }
 
 .head_text {
-  @apply mt-5 text-5xl font-extrabold leading-[1.15] text-black sm:text-6xl;
+  @apply mt-5 text-5xl font-extrabold leading-[1.15] text-black dark:text-gray-400 sm:text-6xl;
 }
 
 .orange_gradient {
@@ -102,19 +102,19 @@
 }
 
 .desc {
-  @apply mt-5 text-lg text-gray-600 sm:text-xl max-w-2xl;
+  @apply mt-5 text-lg text-gray-600 sm:text-xl max-w-2xl dark:text-white;
 }
 
 .search_input {
-  @apply block w-full rounded-md border border-gray-200 bg-white py-2.5 font-satoshi pl-5 pr-12 text-sm shadow-lg font-medium focus:border-black focus:outline-none focus:ring-0;
+  @apply block w-full rounded-md border border-gray-200 bg-white dark:border-slate-900 dark:bg-slate-700 py-2.5 font-satoshi pl-5 pr-12 text-sm shadow-lg font-medium focus:border-black dark:focus:border-slate-600 focus:outline-none focus:ring-0;
 }
 
 .copy_btn {
-  @apply w-7 h-7 rounded-full bg-white/10 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur flex justify-center items-center cursor-pointer;
+  @apply w-7 h-7 rounded-full bg-white/10 dark:bg-slate-800 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur flex justify-center items-center cursor-pointer;
 }
 
 .glassmorphism {
-  @apply rounded-xl border border-gray-200 bg-white/20 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur p-5;
+  @apply rounded-xl border border-gray-200 dark:border-gray-600 bg-white/20 dark:bg-gray-700 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur p-5;
 }
 
 .prompt_layout {
@@ -128,29 +128,29 @@
 
 /* Form Component */
 .form_textarea {
-  @apply w-full flex rounded-lg h-[200px] mt-2 p-3 text-sm text-gray-500 outline-0;
+  @apply w-full flex rounded-lg h-[200px] mt-2 p-3 text-sm text-gray-500 outline-0 dark:text-gray-100 dark:bg-gray-800;
 }
 
 .form_input {
-  @apply w-full flex rounded-lg mt-2 p-3 text-sm text-gray-500 outline-0;
+  @apply w-full flex rounded-lg mt-2 p-3 text-sm text-gray-500 outline-0 dark:text-gray-100 dark:bg-gray-800;
 }
 
 /* Nav Component */
 .logo_text {
-  @apply max-sm:hidden font-satoshi font-semibold text-lg text-black tracking-wide;
+  @apply max-sm:hidden font-satoshi font-semibold text-lg text-black tracking-wide dark:text-white;
 }
 
 .dropdown {
-  @apply absolute right-0 top-full mt-3 w-full p-5 rounded-lg bg-white min-w-[210px] flex flex-col gap-2 justify-end items-end;
+  @apply absolute right-0 top-full mt-3 w-full p-5 rounded-lg bg-white min-w-[210px] flex flex-col gap-2 justify-end items-end dark:bg-gray-800;
 }
 
 .dropdown_link {
-  @apply text-sm font-inter text-gray-700 hover:text-gray-500 font-medium;
+  @apply text-sm font-inter text-gray-700 hover:text-gray-500 font-medium dark:text-slate-300;
 }
 
 /* PromptCard Component */
 .prompt_card {
-  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
+  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 dark:border-gray-800 bg-white/20 dark:bg-gray-800 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit dark:shadow-gray-200/50;
 }
 
 .flex-center {
@@ -171,16 +171,16 @@
 
 /*Pagination Component*/
 .pagination {
-  @apply flex-between w-full rounded-lg border border-gray-300 bg-white/20 px-4 py-3 sm:px-6;
+  @apply flex-between w-full rounded-lg border border-gray-300 dark:border-gray-800 bg-white/20 dark:bg-gray-800 px-4 py-3 transition-all sm:px-6;
 }
 .btn-sm-pagination {
-  @apply relative inline-flex items-center rounded-md border border-gray-300 bg-white/20 px-4 py-2 text-sm font-medium text-gray-700 hover:bg-primary-orange hover:text-white;
+  @apply relative inline-flex items-center rounded-md border border-gray-300 dark:border-gray-100 bg-white/20 dark:bg-gray-900 px-4 py-2 text-sm font-medium text-gray-700 dark:text-gray-400 hover:bg-primary-orange hover:text-white dark:hover:bg-primary-orange dark:hover:text-white;
 }
 
 .btn-index-pagination {
-  @apply relative inline-flex items-center px-4 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:z-20 focus:outline-offset-0;
+  @apply relative inline-flex items-center px-4 py-2 text-sm font-semibold text-gray-900 dark:text-gray-400 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:z-20 focus:outline-offset-0;
 }
 
 .btn-pagination-active {
-  @apply z-10 bg-primary-orange text-white focus:z-20 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-orange hover:text-gray-900;
+  @apply z-10 bg-primary-orange text-white focus:z-20 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-orange hover:text-gray-900 dark:hover:text-gray-400;
 }
